# T_AI

./: .dockerignore  .gitignore  Cortana_api.py  Dockerfile  Outlook_agent.py  README.md  UV_SETUP.md  calendar_agent.py  composio_tools_agent.py  contacts_agent.py  cort_mcp_test.ipynb  cortana_agent.py  cortana_api_test.ipynb  cortana_test.ipynb  cortana_voice_test.ipynb  deep_research.py  gmail_agent.py  google_agent.py  maps_agent.py  memory_handling.ipynb  pyproject.toml  requirements.txt  tasks_agent.py  token_creator.py
.github/workflows/: publish.yml
notebooks/: cort_mcp_test.ipynb  cortana_test.ipynb  cortana_voice_test.ipynb  memory_handling.ipynb
src/cortana/: Cortana_api.py  cortana_agent.py
src/cortana/utils/: helper_functions.py
src/t_ai/: __init__.py  t_agent.py
src/t_ai/PrebuiltTools/: google_tools.py
src/t_ai/utils/: helper_functions.py
utils/: composio_tools_agent.py
